exports[`ContextMenu tests does not shows when event with incorrect "id" is triggered 1`] = `
<ContextMenu
  id="CORRECT_ID">
  <nav
    className="react-contextmenu"
    onContextMenu={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "opacity": 0,
        "pointerEvents": "none",
        "position": "fixed",
      }
    } />
</ContextMenu>
`;

exports[`ContextMenu tests does not shows when event with incorrect "id" is triggered 2`] = `
<ContextMenu
  id="CORRECT_ID">
  <nav
    className="react-contextmenu"
    onContextMenu={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "opacity": 0,
        "pointerEvents": "none",
        "position": "fixed",
      }
    } />
</ContextMenu>
`;

exports[`ContextMenu tests shows when event with correct "id" is triggered 1`] = `
<ContextMenu
  id="CORRECT_ID">
  <nav
    className="react-contextmenu"
    onContextMenu={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "opacity": 0,
        "pointerEvents": "none",
        "position": "fixed",
      }
    } />
</ContextMenu>
`;

exports[`ContextMenu tests shows when event with correct "id" is triggered 2`] = `
<ContextMenu
  id="CORRECT_ID">
  <nav
    className="react-contextmenu react-contextmenu--visible"
    onContextMenu={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "opacity": 0,
        "pointerEvents": "none",
        "position": "fixed",
      }
    } />
</ContextMenu>
`;
